tests/grammar/types/var_type_annotation/type_fail_3/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:2:1
  |
2 | _name = 1
  | ^ expected str, got int(1)
  |